--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
+    "vue-select": "^3.16.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
