--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.10.7",
     "v-mask": "^2.3.0",
     "vue": "^2.6.11",
+    "vue-inline-svg": "^2.1.0",
     "vue-router": "^3.5.3",
     "vue-select": "^3.16.0",
     "vuex": "^3.6.2"
