add task status

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
+    "jest": "^27.4.7",
     "v-mask": "^2.3.0",
     "vue": "^2.6.11",
     "vue-inline-svg": "^2.1.0",
